// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`GenericField Component GenericField renders 1`] = `
<div>
  <div
    class="gds-field-group"
  />
</div>
`;

exports[`GenericField Component GenericField renders inline with error message, not displaying the error 1`] = `
<div>
  <div
    class="gds-field-group field-inline"
  />
</div>
`;

exports[`GenericField Component GenericField renders with children 1`] = `
<div>
  <div
    class="gds-field-group"
  >
    <div
      class="CHILD-TEST"
    />
  </div>
</div>
`;

exports[`GenericField Component GenericField renders with error message 1`] = `
<div>
  <div
    class="gds-field-group"
  >
    <div
      class="field-message"
    >
      <div
        class="field-error-message"
      >
        ERROR-MESSAGE
      </div>
    </div>
  </div>
</div>
`;

exports[`GenericField Component GenericField renders with error message and helper text, displaying only error 1`] = `
<div>
  <div
    class="gds-field-group"
  >
    <div
      class="field-message"
    >
      <div
        class="field-error-message"
      >
        ERROR-MESSAGE
      </div>
    </div>
  </div>
</div>
`;

exports[`GenericField Component GenericField renders with error message in read only, not displaying the error 1`] = `
<div>
  <div
    class="gds-field-group"
  >
    <div
      class="field-message"
    >
      <div
        class="field-helper-text"
      />
    </div>
  </div>
</div>
`;

exports[`GenericField Component GenericField renders with error message in read only, not displaying the error, only displaying the helper text 1`] = `
<div>
  <div
    class="gds-field-group"
  >
    <div
      class="field-message"
    >
      <div
        class="field-helper-text"
      >
        HELPER-TEXT
      </div>
    </div>
  </div>
</div>
`;

exports[`GenericField Component GenericField renders with helper text and counter 1`] = `
<div>
  <div
    class="gds-field-group"
  >
    <div
      class="field-message"
    >
      <div
        class="field-helper-text"
      >
        HELPER-TEXT
      </div>
      <div
        class="field-counter"
      >
        5 / 10
      </div>
    </div>
  </div>
</div>
`;

exports[`GenericField Component GenericField renders with highlight in readonly 1`] = `
<div>
  <div
    class="gds-field-group"
  />
</div>
`;

exports[`GenericField Component GenericField renders with highlight not in readonly 1`] = `
<div>
  <div
    class="gds-field-group"
  />
</div>
`;

exports[`GenericField Component GenericField renders with invertInputDescription 1`] = `
<div>
  <div
    class="gds-field-group"
  >
    <div
      class="field-message field-inverted"
    >
      <div
        class="field-helper-text"
      >
        HELPER
      </div>
    </div>
    CHILD
  </div>
</div>
`;

exports[`GenericField Component GenericField renders with invertInputDescription 2`] = `
<div>
  <div
    class="gds-field-group"
  >
    CHILD
    <div
      class="field-message"
    >
      <div
        class="field-helper-text"
      >
        HELPER
      </div>
    </div>
  </div>
</div>
`;
